Fix style: body padding on mobile screens

--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -10,6 +10,7 @@ body
     line-height: 1.6
     color: $black
     margin: 0
+    padding: 0 $normal-space
 
 body > header h1
     font-weight: bold
