--- a/_sass/documentation.sass
+++ b/_sass/documentation.sass
@@ -44,7 +44,6 @@ article
         position: relative
         width: inherit
         height: inherit
-        top: inherit
         font-size: 150%
         padding-bottom: $normal-space
         border-bottom: 2px solid $gray-lighter
