--- a/_sass/homepage.sass
+++ b/_sass/homepage.sass
@@ -1,7 +1,8 @@
 .hero
     background-color: $black
     color: $white
-    padding: $normal-space 4em
+    margin: 0 calc(0px - #{$normal-space})
+    padding: $normal-space
     img.hero-logo
         width: 7em
         top: 35px
